--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "gatsby develop",
-    "build": "gatsby build"
+    "build": "run-p build:**",
+    "build:site": "gatsby build",
+    "build:functions": "cd functions && npm install"
   },
   "repository": {
     "type": "git",
@@ -43,6 +45,7 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-helmet": "^5.0.15",
-    "eslint-config-react-app": "^5.2.1"
+    "eslint-config-react-app": "^5.2.1",
+    "npm-run-all": "^4.1.5"
   }
 }
