--- a/package.json
+++ b/package.json
@@ -39,12 +39,19 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-modal": "^3.11.2",
     "react-select": "1.x"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
+    "@types/postcss-import": "^12.0.0",
+    "@types/postcss-nested": "^4.2.3",
+    "@types/postcss-url": "^8.0.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-helmet": "^5.0.15",
+    "@types/react-modal": "^3.10.5",
+    "@types/react-select": "1.3.4",
     "eslint-config-react-app": "^5.2.1",
     "npm-run-all": "^4.1.5"
   }
